Fixed general dark mode styling issues throughout the website.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,10 +16,6 @@
   font: inherit;
 }
 
-html {
-  color-scheme: dark light;
-}
-
 body {
   min-height: 100vh;
 }
